--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -24,17 +24,28 @@
             display:block; 
         }
         input{
-            width:140px;
+            width:80px;
         }
         select{
             width:120px;
         }
-        .inner-filter{
-            color:green;        
+        .div-inline{
+            display:inline;        
         }
-        .sale_num{
-            width:25px;
-            margin-left:0px;
+        .inner-filter{
+            margin:40px;       
+        }
+        .inner-filter input{
+            width:25px;        
+        }
+        .inner-filter-one{
+           color:#f89406;
+        }
+        .inner-filter-two{
+           color:#3a87ad;
+        }
+        .inner-filter-three{
+           color:#5bb75b;     
         }
     </style>
 </head>
@@ -43,9 +54,8 @@
 <div class="container">
 <div class="outer-filter">
 <form  class="form-inline" method="POST" action="/items/product/sale/" >
-  <div>
-     <div>
-       <label class="control-label" for="shop_id">选择店铺:</label>
+       <div class="div-inline">
+         <label class="control-label" for="shop_id">选择店铺:</label>
          <select name="shop_id" class="selector">
            <option value="" >全部</option>
 	{% for shop in sale_stats.shops %}
@@ -53,34 +63,38 @@
 	{% endfor %}
          </select>
       </div>
-      <div>
+      <div class="div-inline">
         <label class="control-label" for="df">选择日期:</label>
-        <input type="text" id="f_datepicker" name="df" class="datepicker" value="{{ sale_stats.df }}" />-
-        <input type="text" id="t_datepicker" name="dt" class="datepicker" value="{{ sale_stats.dt }}" />
+        <input type="text" id="f_datepicker" name="df" class="datepicker" value="{{ sale_stats.df }}"
+         />-<input type="text" id="t_datepicker" name="dt" class="datepicker" value="{{ sale_stats.dt }}" />
       </div>
-       <div>
+       <div class="div-inline">
          <label class="control-label" for="outer_id">商家编码:</label>
          <input type="text" name="outer_id" value="{{ sale_stats.outer_id }}"/>
        </div>
-        <div><input type="submit" value="查询" class="btn btn-primary"/>  </div>
-  </div>
+        <div class="div-inline"><input type="submit" value="查询" class="btn btn-primary"/>  </div>
 </form>
 </div>
 <div id="content" style="display:block;clear:both;">
   <div class="inner-filter">
-    <div>
-	<label class="control-label"  for="sale_gte">销量区间:</label>
+    <div class="div-inline inner-filter-one">
+	<label class="control-label"  for="sale_gte" >销量区间:</label>
 	<input type="text" name="sale_gte" class="sale_num" value="" size="4"
 	/>-<input type="text" name="sale_lte" class="sale_num" value="" size="4"/>
     </div>
-   <div>
-	<label class="control-label"  for="sale_payment_gte" >售额区间:</label>
-	<input type="text" name="sale_payment_gte" class="sale_num" value="" size="4"
-	/>-<input type="text" name="sale_payment_lte" class="sale_num" value="" size="4"/>
+   <div class="div-inline  inner-filter-two">
+	<label class="control-label"  for="sale_payment_gte">售额区间:</label>
+	<input type="text" name="sale_payment_gte" class="sale_payment" value="" size="4"
+	/>-<input type="text" name="sale_payment_lte" class="sale_payment"  value="" size="4"/>
     </div>
-    <button>过滤</button>
+    <div class="div-inline  inner-filter-three">
+	<label class="control-label"  for="sale_payment_gte"  >售额/成本 比:</label>
+	<input type="text" name="sale_paycost_gte" class="sale_paycost" value="" size="4"
+	/>-<input type="text" name="sale_paycost_lte" class="sale_paycost" value="" size="4"/>
+    </div>
+    <button class="div-inline">过滤</button>
   </div>
-  <table>
+  <table class="table table-bordered  table-condensed">
     <tr>
       <th>商品/规格编码</th><th style="width:150px;">商品/规格名称</th><th>销售数量</th><th>成本</th><th>销售额</th><th>退款</th>
     </tr>
@@ -96,7 +110,7 @@
   {% for product_id ,product in sale_stats.sale_items %}
   <div class="list-tables">
     <div class="list-table-head">
-      <table>
+      <table class="table table-bordered  table-condensed">
         <tr>
             <td>{{ product_id }}</td>
             <td style="width:150px;">{{ product.name }}</td>
