--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -111,7 +111,7 @@
   <table class="table table-bordered  table-condensed">
     <tr>
       <th>序号</th><th>商品/规格编码</th><th style="width:150px;">商品/规格名称</th>
-      <th>销售数量</th><th>销售成本</th><th>销售额</th><th>退款</th><th>剩余库存</th>
+      <th>销售数量</th><th>销售成本</th><th>销售额</th><th>退款</th><th>剩余库存</th><th>库存成本</th>
     </tr>
    <tr>
    		<td>-</td>
@@ -122,6 +122,7 @@
         <td>{{ sale_stats.total_sale_payment }}</td>
         <td>{{ sale_stats.total_sale_refunds }}</td>
         <td>{{ sale_stats.total_stock_num }}</td>
+	<td>{{ sale_stats.total_stock_cost }}</td>
     </tr>
   </table>
   {% for product_id ,product in sale_stats.sale_items %}
@@ -137,6 +138,7 @@
             <td>{{ product.sale_payment }}</td>
             <td>{{ product.sale_refunds }}</td>
             <td>{{ product.collect_num }}</td>
+	    <td>{{ product.stock_cost }}</td>
         </tr>
     </table>
     </div>
@@ -152,6 +154,7 @@
 		<td >{{ sku.sale_payment }}</td>
         <td >{{ sku.sale_refund }}</td>
         <td >{{ sku.quantity }}</td>
+	<td >{{ sku.stock_cost }}</td>
         </tr>
 	    {% endfor %}
 	</table>
