fix yunda cancel unuse order

--- a/shopmanager/shopapp/yunda/templates/yunda/weight_small_package.html
+++ b/shopmanager/shopapp/yunda/templates/yunda/weight_small_package.html
@@ -78,7 +78,7 @@
   <body>
   	<div class="container">
   		<div class="head-panel">
-  			<div class="well well-small title-panel"><a href="http://test.huyi.so/admin/yunda/" >
+  			<div class="well well-small title-panel"><a href="/admin/yunda/" >
   				<icon class="icon-backward"></icon>&nbsp;&nbsp;返回到运单系统</a>
   			</div>
 	  		<div class="well opt-panel" >
