--- a/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
@@ -37,7 +37,7 @@
 
     <table id="refund_table" class="table table-bordered">
 	<thead>
-	  <th>编号</th><th>内部单号</th><th>返利类型</th><th>VIP邀请码</th>备注</th><th>返利状态</th><th>申请时间</th>
+	  <th>编号</th><th>内部单号</th><th>返利类型</th><th>VIP邀请码</th><th>备注</th><th>返利状态</th><th>申请时间</th>
 	</thead>
 	<tbody>
 	  {% if first_refund %}	
