--- a/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
@@ -54,11 +54,13 @@
 	  <option value="0" >申请退款</option>
 	  <option value="1" >申请退邮费</option>
 	  <option value="2" >支付宝转账</option>
+	  <option value="3" >银行转账</option>
 	</select>
       </td>
       <td>
 	<select class="form-control" id="id_refund_amount">
 	  <option value="0" >客服协商</option>
+	  <option value="1" >订单全额</option>
 	  <option value="200" >￥2.00</option>
 	  <option value="300" >￥3.00</option>
 	  <option value="400" >￥4.00</option>
