--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples1.html
@@ -18,6 +18,51 @@
   </div>
 </div>
 
+<div class="panel panel-default" style="margin-top:5px"> 
+  <div class="panel-heading" style="color:red">感恩礼包 免费包邮寄到家!</div>
+  <div class="panel-body">
+    <p style="color:#d9534f">请选择您中意的礼品：</p>
+    <div class="row">
+      <div class="col-xs-12" style="text-align:center">
+	<select class="form-control input-sm" name="selection" id="id_selection" style="width:80%;">
+	  <option value="0">选择</option>
+	  <option value="1">天猫No.1 卡通吸汗巾</option>
+	  <option value="2">天鹅绒 时尚造型三角巾</option>
+	  <option value="3">纯棉不勒脚 毛巾袜（2双装）</option>
+	  <option value="4">防雾霾PM2.5卡通口罩</option>
+	  <option value="5">时尚针织三角巾</option>
+	  <option value="6">纯棉卡通三角裤</option>
+	</select>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+	<div class="thumbnail" id="id_i1" {% if parent_award.award_val == 1 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaL2PT8NunDm0QuwY0f3jZdzL4W2MXbOWodNrvDLqtSytTuxQ7mjkHiaGA/0">
+	</div>
+	<div class="thumbnail" id="id_i2" {% if parent_award.award_val == 2 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLN160Swld40Se6S4M1B2Eu4Ge1lFkBLNhblicfM0z63oceSYhmghSvHA/0">
+	</div>
+	<div class="thumbnail" id="id_i3" {% if parent_award.award_val == 3 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLiaIehcUeMgaSicJzjr1E7vNkkkIRV7oBOaa8QtvAVfl4pbJ3fribtia2Vg/0">
+	</div>
+	<div class="thumbnail" id="id_i4" {% if parent_award.award_val == 4 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLINLbNAiaqzCvXy0lb5mxpExonL6rdteicx7bazWdzViaJPia69E35l2raw/0">
+	</div>
+	<div class="thumbnail" id="id_i5" {% if parent_award.award_val == 5 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLQk8ZCJQciaD7hNMR4zQRWDhtUP2RRmVfAJiaypTianqTnGh1LznclxoVw/0">
+	</div>
+	<div class="thumbnail" id="id_i6" {% if parent_award.award_val == 6 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	  <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLdVg66clrLXM6rO34qYPpcBI0sKicjYwgrMjTPpgaxqrh89oEmz4D0yA/0">
+	</div>
+      </div>
+    </div>
+    
+  </div>
+</div>
+
+
 {% for sample in samples %}
 <div class="panel panel-default" style="margin-top:5px"> 
   <div class="panel-heading" style="color:red">双十一来啦，欢迎围观！</div>
