--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -28,7 +28,7 @@
       {% if referal_images|length > 0 %}
       <div class="row">
 	<div class="col-xs-12" style="text-align:center">
-	  {% if is_share %}
+	  {% if my_award and my_award.is_share %}
 	  <p style="color:#d9534f">您已完成感恩礼包发送。记得让好友来领！</p>
 	  {% else %}
           <p><a href="/weixin/sales/award/notify/" class="btn btn-warning">立即发礼包 >></a></p>
@@ -43,7 +43,8 @@
     <div class="panel-heading" style="color:orange">我收到的礼包</div>
     <div class="panel-body">
       {% csrf_token %}
-      <div style="height:166px;padding-top:20px;text-align:center;">
+      <div class="row" id="id_award_remind" {% if my_award and my_award.is_receive %} style="display:none" {% else %} style="display:block" {% endif %}>
+      <div class="col-xs-12" style="height:166px;padding-top:20px;text-align:center;">
 	{% if parent_award and parent_award.is_share %} 
         <p>您的好友 [{{ parent_nickname }}] 给您发了一个感恩礼包，快打开看看吧！</p>
         <button class="btn btn-danger" onclick="unpack()">打开礼包 &gt;&gt;</button>
@@ -54,68 +55,99 @@
         <button id="id-remind" type="button" class="btn btn-danger" onclick="remind()">点击发送提醒 &gt;&gt;</button>
         {% endif %}
       </div>
+      </div>
       {% if parent_award and parent_award.is_share %}
-      <div class="row" id="id_award" style="display:">
-	<div class="col-xs-12">
-	  <p>您的礼包含有：</p>
-	  <ul class="list-group">
-	    <li class="list-group-item" >1. 优尼世界 双十一满199减50优惠券 全场通用</li>
-	    {% if parent_award.award_val == 1 %}
-	    <li class="list-group-item" id="id_parent_award" selection="1">2. 天猫No.1 卡通吸汗巾 (好友推荐)</li>
-	    {% endif %}
-	    {% if parent_award.award_val == 2 %}
-	    <li class="list-group-item" id="id_parent_award" selection="2">2. 天鹅绒 时尚造型三角巾</li>
-	    {% endif %}
-	    {% if parent_award.award_val == 3 %}
-	    <li class="list-group-item" id="id_parent_award" selection="3">2. 纯棉不勒脚 毛巾袜（2双装）</li>
-	    {% endif %}
-	    {% if parent_award.award_val == 4 %}
-	    <li class="list-group-item" id="id_parent_award" selection="4">2. 防雾霾PM2.5卡通口罩</li>
-	    {% endif %}
-	    {% if parent_award.award_val == 5 %}
-	    <li class="list-group-item" id="id_parent_award" selection="5">2. 时尚针织三角巾</li>
-	    {% endif %}
-	    {% if parent_award.award_val == 6 %}
-	    <li class="list-group-item" id="id_parent_award" selection="6">2. 纯棉卡通三角裤</li>
-	    {% endif %}
-	  </ul>
-	  
-	  <div class="thumbnail" id="id_i1" {% if parent_award.award_val == 1 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNrK541Vd6eH9ewY4ib6oYnKBxbMOIsUphvaMeTCljia3TM6DLq6HbmJ6w/0">
+      <div id="id_award" {% if my_award and my_award.is_receive %} style="display:block" {% else %} style="display:none" {% endif %}>
+	<p style="color:#d9534f">您的礼包含有：</p>
+	<p style="color:#d9534f">1. 优尼世界 双十一满199减50优惠券</p>
+	<div class="row">
+	  <div class="col-xs-6">
+	    <div class="thumbnail">
+	      <img style="width:100%" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLKgbibibRvEcbiax61bchOUpyTFzP8qNGPUF6JSHQ3YOysrtfFOLj8tCqg/0"> 
+	      <span style="font-size:10px">请复制右边链接到电脑或手机浏览器领取。</span>
+	    </div>
+	    
 	  </div>
-	  <div class="thumbnail" id="id_i2" {% if parent_award.award_val == 2 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNcPbGkJsfmvDD9CTqF8sK76NWCzbAvKJL9BELT383CRh0SqRvbnhRCw/0">
+	  <div class="col-xs-6">
+	    <p><font style="font-size:10px">电脑领取链接:</font><br><font style="font-size:11px">http://t.cn/R78HobI</font></p>
+	    <p><font style="font-size:10px">手机领取链接:</font><br><font style="font-size:11px">http://t.cn/R78Hku7</font></p>
+	    <p><a style="font-size:10px">其他领取方式 >></a></p>
 	  </div>
-	  <div class="thumbnail" id="id_i3" {% if parent_award.award_val == 3 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNwpS5VyWq6FfO6PD9DXQA4ibcs8zvS1m95cuGaDWz7ibHaEMggUdfaxYw/0">
-	  </div>
-	  <div class="thumbnail" id="id_i4" {% if parent_award.award_val == 4 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNSsFhXjOnUjbonibpY7NPgLgzKzDicpp0z1BpicpRiboryib1qAj0WfO8ffA/0">
-	  </div>
-	  <div class="thumbnail" id="id_i5" {% if parent_award.award_val == 5 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaN65ibd1I6w8ZcSGMsC51BmFfVmjE6E12SqyNb56txgeKb7r4YyvWsia4A/0">
-	  </div>
-	  <div class="thumbnail" id="id_i6" {% if parent_award.award_val == 6 %} style="display:block" {% else %} style="display:none" {% endif %}>
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLubJ13YV5YCHGRNgx5YhqiaNNlbUNRD9SvSafDqaFick0naAmRnlhgm3kcnVLRq1uyJoL19Yu06eIGQ/0">
-	  </div>
-
-	  <p>您也可自行选择与好友推荐不同的礼品：</p>
-	  <select class="form-control input-sm" name="selection" id="id_selection">
-	    <option value="0">选择</option>
-	    <option value="1">天猫No.1 卡通吸汗巾</option>
-	    <option value="2">天鹅绒 时尚造型三角巾</option>
-	    <option value="3">纯棉不勒脚 毛巾袜（2双装）</option>
-	    <option value="4">防雾霾PM2.5卡通口罩</option>
-	    <option value="5">时尚针织三角巾</option>
-	    <option value="6">纯棉卡通三角裤</option>
-	  </select>
-
 	</div>
+	{% if gift_selection == 1 %}
+	<p id="id_parent_award" selection="1" style="color:#d9534f">2. 天猫No.1 卡通吸汗巾</p>
+	{% endif %}
+	{% if gift_selection == 2 %}
+	<p id="id_parent_award" selection="2" style="color:#d9534f">2. 天鹅绒 时尚造型三角巾</p>
+	{% endif %}
+	{% if gift_selection == 3 %}
+	<p id="id_parent_award" selection="3" style="color:#d9534f">2. 纯棉不勒脚 毛巾袜（2双装）</p>
+	{% endif %}
+	{% if gift_selection == 4 %}
+	<p id="id_parent_award" selection="4" style="color:#d9534f">2. 防雾霾PM2.5卡通口罩</p>
+	{% endif %}
+	{% if gift_selection == 5 %}
+	<p id="id_parent_award" selection="5" style="color:#d9534f">2. 时尚针织三角巾</p>
+	{% endif %}
+	{% if gift_selection == 6 %}
+	<p id="id_parent_award" selection="6" style="color:#d9534f">2. 纯棉卡通三角裤</p>
+	{% endif %}
+	<div class="row">
+	  <div class="col-xs-12">
+	    <div class="thumbnail" id="id_i1" {% if parent_award.award_val == 1 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaL2PT8NunDm0QuwY0f3jZdzL4W2MXbOWodNrvDLqtSytTuxQ7mjkHiaGA/0">
+	    </div>
+	    <div class="thumbnail" id="id_i2" {% if parent_award.award_val == 2 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLN160Swld40Se6S4M1B2Eu4Ge1lFkBLNhblicfM0z63oceSYhmghSvHA/0">
+	    </div>
+	    <div class="thumbnail" id="id_i3" {% if parent_award.award_val == 3 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLiaIehcUeMgaSicJzjr1E7vNkkkIRV7oBOaa8QtvAVfl4pbJ3fribtia2Vg/0">
+	    </div>
+	    <div class="thumbnail" id="id_i4" {% if parent_award.award_val == 4 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLINLbNAiaqzCvXy0lb5mxpExonL6rdteicx7bazWdzViaJPia69E35l2raw/0">
+	    </div>
+	    <div class="thumbnail" id="id_i5" {% if parent_award.award_val == 5 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLQk8ZCJQciaD7hNMR4zQRWDhtUP2RRmVfAJiaypTianqTnGh1LznclxoVw/0">
+	    </div>
+	    <div class="thumbnail" id="id_i6" {% if parent_award.award_val == 6 %} style="display:block" {% else %} style="display:none" {% endif %}>
+	      <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLdVg66clrLXM6rO34qYPpcBI0sKicjYwgrMjTPpgaxqrh89oEmz4D0yA/0">
+	    </div>
+	  </div>
+	</div>
+	<p style="color:#d9534f">您也可选择不同的礼品：</p>
+	<div class="row">
+	  <div class="col-xs-12" style="text-align:center">
+	    <select class="form-control input-sm" name="selection" id="id_selection" style="width:80%;">
+	      <option value="0">选择</option>
+	      <option value="1">天猫No.1 卡通吸汗巾</option>
+	      <option value="2">天鹅绒 时尚造型三角巾</option>
+	      <option value="3">纯棉不勒脚 毛巾袜（2双装）</option>
+	      <option value="4">防雾霾PM2.5卡通口罩</option>
+	      <option value="5">时尚针织三角巾</option>
+	      <option value="6">纯棉卡通三角裤</option>
+	    </select>
+	  </div>
+	</div>
+	<p style="margin-top:15px;color:red">为了实现自由选择，请用下面优惠券拍下您的礼物产品，免费包邮寄到家哦！</p>
+	<div class="row">
+	  <div class="col-xs-6">
+	    <div class="thumbnail">
+	      <img width="100%" src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLqTM5mriaRVLuLR5LotjM9ks6OL1icCoED9qHibN7XGOzdLemSFqIfWwYw/0">
+	      <span style="font-size:10px">请复制右边链接到电脑或手机浏览器领取。</span>
+	    </div>
+	  </div>
+	  <div class="col-xs-6">
+	    <p><font style="font-size:10px">电脑领取链接:</font><br><font style="font-size:11px">http://t.cn/R78QNv4</font></p>
+	    <p><font style="font-size:10px">手机领取链接:</font><br><font style="font-size:11px">http://t.cn/R78Qi3f</font></p>
+	    <p><a style="font-size:10px">其他领取方式 >></a></p>
+	  </div>
+	</div>
+	<p style="font-size:10px"><font style="color:#d9534f">温馨提示</font>：您也可联系微信客服索要优惠券链接，及咨询其他问题。</p>
       </div>
       {% endif %}
     </div>
   </div>
-
+  
 
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">历史中奖名单公示</div>
@@ -147,14 +179,25 @@
           $("#id_i"+selection).css("display","none");
           $("#id_i"+val).css("display","block");
           $("#id_parent_award").attr("selection",val);
-          $("#id_parent_award")[0].innerHTML = "2. " + $("#id_selection option:selected").text() + " (自选)"
+          $("#id_parent_award")[0].innerHTML = "2. " + $("#id_selection option:selected").text();
         }
       }
     }
   );
 
   function unpack() {
-    console.log("unpack");
+    var select_val = $("#id_parent_award").attr("selection");
+    var url = "/weixin/sales/award/";
+    var csrf_token = document.getElementsByName("csrfmiddlewaretoken")[0].value;
+    var data = {"select_val":select_val, "csrfmiddlewaretoken":csrf_token};
+
+    var callback = function (res) {
+      if (res["success"] == true) {
+        $("#id_award").css("display","block");		
+        $("#id_award_remind").css("display","none");	   
+      }
+    };
+    $.ajax({url:url, data:data, method:"post", success:callback});
   }
 
   function remind() {
