--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads1.html
@@ -1,7 +1,11 @@
 {% extends "weixin/weixin_base.html" %}
 
+{% block meta %}
+<meta name="sharecontent" data-msg-img="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLRB3EMEibPzXZWs7XCPmBmqW8uzaCBBxYudU0PKYjmw0r7MOsoJ000zg/0" data-msg-title="小小礼物 感恩的心 感谢有你！" data-msg-content="十一月，感恩季。一份小小礼物，代表我的感恩。请一定打开，让我放心您已收到。" data-msg-callBack="" data-line-img="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLRB3EMEibPzXZWs7XCPmBmqW8uzaCBBxYudU0PKYjmw0r7MOsoJ000zg/0" data-line-title="小小礼物 感恩的心 感谢有你！" data-line-callBack=""/>  
+{% endblock %}
+
 {% block title %} 
-小小礼物 代表我的感恩 谢谢你们！
+小小礼物 感恩的心 谢谢你们！
 {% endblock %}
 
 {% block container %}
@@ -41,20 +45,105 @@
 	<div class="col-xs-12">
 	  <h4 style="color:#d9534f">礼包都有啥东东呢？</h4>
 	  <p>亲，您的礼包至少含下面<font style="color:#d9534f;font-size:20px">2份</font>精美礼品：</p>
-	  <ul class="list-group">
-	    <li class="list-group-item">1. 优尼世界 双十一满199减50优惠券 全场通用</li>
-	    <li class="list-group-item">2. 天猫No.1 卡通吸汗巾</li>
-	    <li class="list-group-item">3. 天鹅绒 时尚造型三角巾</li>
-	    <li class="list-group-item">4. 纯棉不勒脚 毛巾袜（2双装）</li>
-	    <li class="list-group-item">5. 婴幼儿防PM2.5卡通口罩</li>
-	    <li class="list-group-item">6. 时尚针织三角巾</li>
-	    <li class="list-group-item">7. 纯棉卡通三角裤</li>
-	  </ul>
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p1" style="color:#029fd6">礼物一：天猫No.1 卡通吸汗巾</h5>
+	    </div>
+	  </div>
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <div class="thumbnail" style="padding:3px" id="id_i1">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaL2PT8NunDm0QuwY0f3jZdzL4W2MXbOWodNrvDLqtSytTuxQ7mjkHiaGA/0">
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p2" style="color:#029fd6">礼物二：天鹅绒 时尚造型三角巾</h5>
+	    </div>
+	  </div>
+	  <div class="row">
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i2">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLN160Swld40Se6S4M1B2Eu4Ge1lFkBLNhblicfM0z63oceSYhmghSvHA/0"/>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p3" style="color:#029fd6">礼物三：纯棉不勒脚 毛巾袜（2双装）</h5>
+	    </div>
+	  </div>
+	  <div class="row" >
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i3">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLiaIehcUeMgaSicJzjr1E7vNkkkIRV7oBOaa8QtvAVfl4pbJ3fribtia2Vg/0"/>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p4" style="color:#029fd6">礼物四：婴幼儿防PM2.5卡通口罩</h5>
+	    </div>
+	  </div>
+	  <div class="row" >
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i4">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLINLbNAiaqzCvXy0lb5mxpExonL6rdteicx7bazWdzViaJPia69E35l2raw/0"/>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p5" style="color:#029fd6">礼物五：时尚针织三角巾</h5>
+	    </div>
+	  </div>
+
+	  <div class="row" >
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i5">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLQk8ZCJQciaD7hNMR4zQRWDhtUP2RRmVfAJiaypTianqTnGh1LznclxoVw/0"/>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p6" style="color:#029fd6">礼物六：纯棉卡通三角裤</h5>
+	    </div>
+	  </div>
+
+	  <div class="row" >
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i6">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLdVg66clrLXM6rO34qYPpcBI0sKicjYwgrMjTPpgaxqrh89oEmz4D0yA/0"/>
+	      </div>
+	    </div>
+	  </div>
+
+	  <div class="row">
+	    <div class="col-xs-12">
+	      <h5 id="id_p7" style="color:#029fd6">礼物七：50元优惠券</h5>
+	    </div>
+	  </div>
+
+	  <div class="row" >
+	    <div class="col-xs-12" style="text-align:center;">
+	      <div class="thumbnail" style="padding:3px" id="id_i7">
+		<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLKgbibibRvEcbiax61bchOUpyTFzP8qNGPUF6JSHQ3YOysrtfFOLj8tCqg/0"/>
+	      </div>
+	    </div>
+	  </div>
+
 	</div>
       </div>
       <div class="row">
         <div class="col-xs-12" style="text-align:center">
-          <p>记得我的F码： {{ vipcode }}</p>
+          <p>记得我的F码： <font style="color:red">{{ vipcode }}</font></p>
           <a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxc2848fa1e1aa94b5&redirect_uri=http://weixin.huyi.so/weixin/inviteresult/&response_type=code&scope=snsapi_base&state=135#wechat_redirect">Go >></a></p>
         </div>
       </div>
@@ -67,5 +156,67 @@
 
 </div>
 {% endblock %}    
-    
+
+{% block tail_script %}    
+<script type="text/javascript">  
+var imgUrl = "https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLticIHepSybaDQKTV5LXs8iaLRB3EMEibPzXZWs7XCPmBmqW8uzaCBBxYudU0PKYjmw0r7MOsoJ000\
+zg/0";
+var lineLink = "http://weixin.huyi.so/weixin/inviteresult/";
+var descContent = "十一月，感恩季。用我的一份感动，带给你一份惊喜。感谢有你！";
+var shareTitle = "小小礼物 感恩的心 感谢有你！";
+var appid = 'wxc2848fa1e1aa94b5';
+
+function shareFriend() {  
+    WeixinJSBridge.invoke('sendAppMessage',{  
+                            "appid": appid,  
+                            "img_url": imgUrl,  
+                            "img_width": "100",  
+                            "img_height": "100",  
+                            "link": lineLink,  
+                            "desc": descContent,  
+                            "title": shareTitle  
+                            }, function(res) {  
+                            _report('send_msg', res.err_msg);  
+                            })  
+}  
+function shareTimeline() {  
+    WeixinJSBridge.invoke('shareTimeline',{  
+                            "img_url": imgUrl,  
+                            "img_width": "100",  
+                            "img_height": "100",  
+                            "link": lineLink,  
+                            "desc": descContent,  
+                            "title": shareTitle  
+                            }, function(res) {  
+                            _report('timeline', res.err_msg);  
+                            });  
+}  
+function shareWeibo() {  
+    WeixinJSBridge.invoke('shareWeibo',{  
+                            "content": descContent,  
+                            "url": lineLink,  
+                            }, function(res) {  
+                            _report('weibo', res.err_msg);  
+                            });  
+}  
+// 当微信内置浏览器完成内部初始化后会触发WeixinJSBridgeReady事件。  
+document.addEventListener('WeixinJSBridgeReady', function onBridgeReady() {  
+  
+        // 发送给好友  
+        WeixinJSBridge.on('menu:share:appmessage', function(argv){  
+            shareFriend();  
+            });  
+  
+        // 分享到朋友圈  
+        WeixinJSBridge.on('menu:share:timeline', function(argv){  
+            shareTimeline();  
+            });  
+  
+        // 分享到微博  
+        WeixinJSBridge.on('menu:share:weibo', function(argv){  
+            shareWeibo();  
+            });  
+        }, false);  
+</script>  
+{% endblock %}
 
